tests/neg/list-len-define.fq
fixpoint "--counterexample"

data Vec 1 = [
  | VNil  { }
  | VCons { head : @(0), tail : Vec @(0)}
]

constant len: (func(1, [(Vec @(0)); int]))

define len(l: Vec a) : int = {
  if (is$VNil l) then 0 else (1 + len(tail l))
}

bind 0 xs : {v: Vec int | v = (VCons 2 VNil)}

constraint:
  env [0]
  lhs {v : Vec int | len v == 3}
  rhs {v : Vec int | v = xs}
  id 1 tag []
